plugins {
    id 'org.springframework.boot' version '2.2.5.RELEASE'
    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
    id 'java'
    id "com.github.spotbugs" version "3.0.0"
    id 'checkstyle'
}

spotbugs {
    ignoreFailures = true
    effort = "max"
    reportLevel = "high"
    toolVersion = '4.0.0-RC1'
}
tasks.withType(com.github.spotbugs.SpotBugsTask){
    reports{
        html{
            enabled = true
        }
        xml{
            enabled = false
        }
    }
}

checkstyle{
    toolVersion = "8.28"
    configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
    ignoreFailures = true
}

group = 'mops'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '1.8'

configurations {
    developmentOnly
    runtimeClasspath {
        extendsFrom developmentOnly
    }
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()

    maven {
        url="https://s3.cs.hhu.de/public/mops/"
        metadataSources {
            artifact()
        }
    }
}

dependencies {
    compile 'com.vladsch.flexmark:flexmark-all:0.60.2'
    compile 'com.github.javafaker:javafaker:1.0.2'
    testImplementation 'com.h2database:h2'
    implementation 'org.hibernate:hibernate-search-orm:5.11.5.Final'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-registry-prometheus'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.keycloak:keycloak-spring-boot-starter:9.0.0'
    implementation 'org.keycloak.bom:keycloak-adapter-bom:3.3.0.Final'
    compileOnly 'org.projectlombok:lombok'
    testCompile 'com.tngtech.archunit:archunit-junit5:0.13.1'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    implementation('org.postgresql:postgresql')
    implementation 'com.google.code.gson:gson:2.8.6'
    implementation 'com.graphql-java:graphql-java:11.0'
    implementation 'com.graphql-java:graphql-java-spring-boot-starter-webmvc:1.0'
    runtime 'com.graphql-java-kickstart:graphiql-spring-boot-starter:6.0.1'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }
    testImplementation 'org.springframework.security:spring-security-test'

    implementation 'mops:styleguide:2.2.0'
}

test {
    useJUnitPlatform()
}
